# halfedge

./: .gitmodules  CMakeLists.txt  README.md
include/halfedge/: DoublyLinkedList.h  DoublyLinkedList.inl  EditHelper.h  HalfEdge.h  HalfEdge.inl  Polygon.h  Polyhedron.h  Polyline.h  TopoID.h  Utility.h  Utility.inl  noncopyable.h  typedef.h
platform/msvc/: .gitignore
platform/msvc/projects/: halfedge.vcxproj  halfedge.vcxproj.filters  halfedge_new.vcxproj  halfedge_new.vcxproj.filters
source/: EditHelper.cpp  HalfEdge.cpp  Polygon.cpp  Polygon_Clip.cpp  Polygon_Edit.cpp  Polyhedron.cpp  Polyhedron_Boolean.cpp  Polyhedron_Build.cpp  Polyhedron_Clip.cpp  Polyhedron_Edit.cpp  Polyhedron_Fill.cpp  Polyhedron_Test.cpp  Polyline.cpp  TopoID.cpp  Utility.cpp
